# workers-tree

./: .env.example  .gitignore  Makefile  README.md  manage.py  pyproject.toml  requirements.txt  setup.cfg
.ebextensions/: db-migrate.config  django.config
.github/workflows/: pyci.yml
static/css/: style.css
workers_tree/: settings.py  test_container.py  urls.py  utils.py  wsgi.py
workers_tree/employees/: apps.py  filter.py  forms.py  mixins.py  models.py  tables.py  urls.py  utils.py  views.py
workers_tree/employees/migrations/: 0001_initial.py
workers_tree/employees/tests/: test_forms.py  test_models.py  test_views.py
workers_tree/fixtures/: employees.json  users.json
workers_tree/templates/: base.html  filter_sort_form.html  index.html  tree_view_template.html
workers_tree/templates/employees/: cabinet.html  employee.html  filter_sort_form.html  js-tree.html  js_sort_filter.html  management.html
workers_tree/templates/users/: delete.html  login.html  sign-up.html  update.html
workers_tree/users/: apps.py  forms.py  mixins.py  models.py  urls.py  views.py
workers_tree/users/migrations/: 0001_initial.py  0002_alter_employeeuser_image.py
workers_tree/users/tests/: test_forms.py  test_models.py  test_views.py
